Add: ссылки навигации

--- a/app/views/tests/edit.html.erb
+++ b/app/views/tests/edit.html.erb
@@ -1,3 +1,5 @@
 <h1>Редактирование теста <%= @test.title %></h1>
 
 <%= render 'tests/form', button: 'Сохранить' %>
+
+<%= link_to 'Назад', tests_path %>
