--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -1,4 +1,7 @@
 <tr>
   <td><%= test.title %></td>
   <td><%= test.level %></td>
+  <td><%= link_to 'Показать', test_path(test) %></td>
+  <td><%= link_to 'Редактировать', edit_test_path(test) %></td>
+  <td><%= link_to 'Удалить', test_path(test), method: :delete, data: { confirm: 'Вы уверены?'} %></td>
 </tr>
