Add: отображение категорий и названий уровней с помощью хелперов

--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -8,7 +8,7 @@
 </p>
 <p>
   <strong>Категория:</strong>
-  <%= @test.category_id %>
+  <%= test_category(@test) %>
 </p>
 
 <%= link_to 'Назад', tests_path %>
