--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -6,6 +6,8 @@
   <tr>
     <th>Название теста</th>
     <th>Уровень</th>
+    <th>Категория</th>
+    <th colspan="3">Действия</th>
   </tr>
 
   <%= render @tests %>
