--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -11,4 +11,5 @@
   <%= test_category(@test) %>
 </p>
 
-<%= link_to 'Назад', tests_path %>
+<%= link_to 'Назад', tests_path %> |
+<%= link_to 'Редактировать', edit_test_path %>
