--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -2,6 +2,7 @@
   <td><%= test.title %></td>
   <td><%= test_level(test) %></td>
   <td><%= test_category(test) %></td>
+  <td><%= number_of_questions(test) %></td>
   <td><%= link_to 'Показать', test_path(test) %></td>
   <td><%= link_to 'Редактировать', edit_test_path(test) %></td>
   <td><%= link_to 'Удалить', test_path(test), method: :delete, data: { confirm: 'Вы уверены?'} %></td>
