--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -7,6 +7,7 @@
     <th>Название теста</th>
     <th>Уровень</th>
     <th>Категория</th>
+    <th>Количество вопросов</th>
     <th colspan="3">Действия</th>
   </tr>
 
