Fix: названия полей на русском языке

--- a/app/views/tests/_form.html.erb
+++ b/app/views/tests/_form.html.erb
@@ -2,19 +2,19 @@
   <%= render 'shared/errors', resource: @test %>
 
   <p>
-    <%= form.label :title %><br>
+    <%= form.label :title, 'Название теста' %><br>
     <%= form.text_field :title, id: :title %>
   </p>
   <p>
-    <%= form.label :level %><br>
+    <%= form.label :level, 'Уровень' %><br>
     <%= form.number_field :level, id: :level %>
   </p><br>
   <p>
-    <%= form.label :category_id %>
+    <%= form.label :category_id, 'Категория' %>
     <%= form.collection_select :category_id, Category.all, :id, :title, prompt: true %>
   </p><br>
   <p>
-    <%= form.label :user_id %>
+    <%= form.label :user_id, 'Автор' %>
     <%= form.collection_select :user_id, User.all, :id, :name, prompt: true %>
   </p>
 
