Add: хелпер заголовка формы создания и редактирования вопроса - question_header

--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Создание нового вопроса теста <%= @test.title %></h1>
+<h1><%= question_header(@question) %></h1>
 
 <%= render 'questions/form', button: 'Создать' %>
 
