--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Редактирование вопроса теста <%= @test.title %></h1>
+<h1><%= question_header(@question) %></h1>
 
 <%= render 'questions/form', button: 'Сохранить' %>
 
