Add: вывод списка вопросов теста на странице самого теста

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,3 +1,15 @@
+<!--<p>-->
+<!--  <strong>Название теста:</strong>-->
+  <%#= @question.test.title %>
+<!--</p>-->
+<!--<p>-->
+<!--  <strong>Уровень:</strong>-->
+  <%#= @question.test.level %>
+<!--</p>-->
+<!--<p>-->
+<!--  <strong>Категория:</strong>-->
+  <%#= test_category(@question.test) %>
+<!--</p>-->
 <p>
   <strong>Формулировка вопроса:</strong>
   <%= @question.body %>
