--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -2,12 +2,6 @@
 
 <%= link_to 'Новый вопрос', new_test_question_path %>
 
-<table>
-  <tr>
-    <th>Вопрос</th>
-    <th colspan="3">Действия</th>
-  </tr>
+<%= render 'questions/question', questions: @test.questions %>
 
-  <%= render @test.questions %>
-
-</table>
+<%= link_to 'Назад к тестам', tests_path %>
