--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -1,15 +1,16 @@
 <p>
   <strong>Название теста:</strong>
   <%= @test.title %>
-</p>
-<p>
+<br>
   <strong>Уровень:</strong>
   <%= @test.level %>
-</p>
-<p>
+<br>
   <strong>Категория:</strong>
   <%= test_category(@test) %>
 </p>
 
+<%= render 'questions/question', questions: @test.questions %>
+<br>
 <%= link_to 'Назад', tests_path %> |
-<%= link_to 'Редактировать', edit_test_path %>
+<%= link_to 'Редактировать тест', edit_test_path %> |
+<%= link_to 'Добавить вопрос', new_test_question_path(@test) %>
