--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'questions/form', button: 'Создать' %>
 
-<%= link_to 'Назад', test_questions_path(@question.test_id) %>
+<%= link_to 'Назад к вопросам', test_questions_path(@question.test_id) %>
