Fix: пусть ссылки

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,7 +4,7 @@
     <strong>Автор<i> Andex </i></strong>
   </p>
   <p>
-    Учебный проект в онлайн-школе <%= link_to 'Thinknetica', 'thinknetica.com' %>
+    Учебный проект в онлайн-школе <%= link_to 'Thinknetica', 'http://thinknetica.com' %>
   </p>
   <p>
     <h3><%= current_year %></h3>
