--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -1,7 +1,7 @@
 <tr>
   <td><%= test.title %></td>
   <td><%= test_level(test) %></td>
-  <td><%= test_category(test) %></td>
+  <td><%= test.category.title %></td>
   <td><%= number_of_questions(test) %></td>
   <td><%= link_to 'Показать', test_path(test) %></td>
   <td><%= link_to 'Редактировать', edit_test_path(test) %></td>
