--- a/app/views/answers/edit.html.erb
+++ b/app/views/answers/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Answer</h1>
+<h1>Редактирование варианта ответа</h1>
 
-<%= render 'form', answer: @answer %>
+<strong><%= @answer.question.body %></strong>
 
-<%= link_to 'Show', @answer %> |
-<%= link_to 'Back', answers_path %>
+<%= render 'form', button: 'Сохранить' %>
+
+<%= link_to 'Показать ответ', @answer %> |
+<%= link_to 'Назад', question_path(@answer.question) %>
