--- a/app/views/answers/show.html.erb
+++ b/app/views/answers/show.html.erb
@@ -1,4 +1,15 @@
-<p id="notice"><%= notice %></p>
+<h2>Вопрос</h2>
+<p>
+  <h3><%= @answer.question.body %></h3>
+</p>
+<p>
+  <strong>Вариант ответа:</strong>
+  <%= @answer.body %>
+</p>
+<p>
+  <strong>Правильность:</strong>
+  <i><%= @answer.correct %></i>
+</p>
 
-<%= link_to 'Edit', edit_answer_path(@answer) %> |
-<%= link_to 'Back', answers_path %>
+<%= link_to 'Редактировать', edit_answer_path(@answer) %> |
+<%= link_to 'Назад', question_path(@answer.question.id) %>
