--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -3,8 +3,8 @@
   <td><%= test_level(test) %></td>
   <td><%= test.category.title %></td>
   <td><%= number_of_questions(test) %></td>
-  <td><%= link_to 'Показать', test_path(test) %></td> |
-  <td><%= link_to 'Редактировать', edit_test_path(test) %></td> |
-  <td><%= link_to 'Удалить', test_path(test), method: :delete, data: { confirm: 'Вы уверены?'} %></td> ||
+  <td><%= link_to 'Показать', test_path(test) %></td>
+  <td><%= link_to 'Редактировать', edit_test_path(test) %></td>
+  <td><%= link_to 'Удалить', test_path(test), method: :delete, data: { confirm: 'Вы уверены?'} %></td>
   <td><%= button_to 'Начать', start_test_path(test) %></td>
 </tr>
