--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -1,8 +1,9 @@
 <h1>Прохождение теста <%= @test_passage.test.title %></h1>
 
-<strong>
-  <%= @test_passage.current_question.body %>
-</strong>
+<strong><%= @test_passage.current_question.body %></strong><br>
+Вопрос
+<strong><%= question_number(@test_passage.current_question) %></strong>
+<strong>из <%= @test_passage.test.questions.count %></strong>
 
 <%= form_with url: test_passage_path(@test_passage), local: true, method: :put do |form| %>
   <%= form.collection_check_boxes :answers_ids, @test_passage.current_question.answers, :id, :body, include_hidden: false do |b| %>
