--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
   </head>
 
   <body>
+    <% if logged_in? %>
+      <p class='nav user'>Добро пожаловать, <strong><%= current_user.name %></strong> Гуру</p>
+    <% end %>
+
     <%= yield %>
   </body>
   <%= render 'shared/footer' %>
