--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,10 @@
 
   <body>
     <% if logged_in? %>
-      <p class='nav user'>Добро пожаловать, <strong><%= current_user.name %></strong> Гуру</p>
+      <p class='nav user'>Добро пожаловать, <strong><%= current_user.name %></strong><i>-Гуру</i></p>
+      <p class='nav user'>
+        <%= link_to 'Выйти', session_path(session), method: :delete, data: { confirm: 'Вы уверены, что хотите выйти?'} %>
+      </p>
     <% end %>
 
     <%= yield %>
