--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
 <h1>Стань Гуру</h1>
 
-<%= render 'form', button: 'Войти' %><br>
+<%= render 'form', button: 'Зарегистрироваться' %><br>
 <%= link_to 'Назад', root_path %>
