--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,4 +1,4 @@
-<h1><%= link_to 'TestGuru', tests_path %></h1>
+<h1 class='nav header'><%= link_to 'TestGuru', tests_path %></h1>
 <% if logged_in? %>
   <p class='nav user'>Добро пожаловать, <strong><%= current_user.name %></strong><i>-Гуру</i></p>
   <p class='nav user'>
