--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -23,5 +23,5 @@
   <%= render @question.answers %>
 </ol>
 
-<%= link_to 'Назад к тесту', test_questions_path(@question.test_id) %> |
+<%= link_to 'Вернуться к тесту', test_questions_path(@question.test_id) %> |
 <%= link_to 'Редактировать', edit_question_path(@question.test_id) %>
