--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer>
   <p>
     <%= github_url('Andex', 'TestGuru') %><br>
-    <strong>Автор<i> Andex </i></strong>
+    <strong>Автор<i> Andex</i> 🖐😊</strong>
   </p>
   <p>
     Учебный проект в онлайн-школе <%= link_to 'Thinknetica', 'http://thinknetica.com' %>
