--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -6,6 +6,6 @@
   </p>
 <% else %>
   <p class='nav user'>
-    <%= link_to 'Регистрация', signup_path %> или <%= link_to 'Уже есть аккаунт', login_path %>
+    <%= link_to 'Регистрация', signup_path %> / <%= link_to 'Уже есть аккаунт', login_path %>
   </p>
 <% end %>
