--- a/app/views/tests/_form.html.erb
+++ b/app/views/tests/_form.html.erb
@@ -13,10 +13,10 @@
     <%= form.label :category_id, 'Категория' %>
     <%= form.collection_select :category_id, Category.all, :id, :title, prompt: true %>
   </p><br>
-  <p>
-    <%= form.label :user_id, 'Автор' %>
-    <%= form.collection_select :user_id, User.all, :id, :name, prompt: true %>
-  </p>
+<!--  <p>-->
+    <%#= form.label :user_id, 'Автор' %>
+    <%#= form.collection_select :user_id, User.all, :id, :name, prompt: true %>
+<!--  </p>-->
 
   <%= form.submit "#{button}" %>
 <% end %>
