--- a/app/views/admin/answers/new.html.erb
+++ b/app/views/admin/answers/new.html.erb
@@ -4,4 +4,4 @@
 
 <%= render 'form', button: 'Создать' %>
 
-<%= link_to 'Назад', question_path(@question) %>
+<%= link_to 'Назад', admin_question_path(@question) %>
