--- a/app/views/admin/tests/_form.html.erb
+++ b/app/views/admin/tests/_form.html.erb
@@ -1,22 +1,22 @@
-<%= form_with model: @test, local: true do |form| %>
+<%= form_with model: [:admin, @test], local: true do |form| %>
   <%= render 'shared/errors', resource: @test %>
 
   <p>
-    <%= form.label :title, 'Название теста' %><br>
+    <%= form.label :title, 'Название теста' %>
     <%= form.text_field :title, id: :title %>
   </p>
   <p>
-    <%= form.label :level, 'Уровень' %><br>
+    <%= form.label :level, 'Уровень' %>
     <%= form.number_field :level, id: :level %>
-  </p><br>
+  </p>
   <p>
     <%= form.label :category_id, 'Категория' %>
     <%= form.collection_select :category_id, Category.all, :id, :title, prompt: true %>
-  </p><br>
-<!--  <p>-->
-    <%#= form.label :user_id, 'Автор' %>
-    <%#= form.collection_select :user_id, User.all, :id, :name, prompt: true %>
-<!--  </p>-->
+  </p>
+  <p>
+    <%= form.label :user_id, 'Автор' %>
+    <%= form.collection_select :user_id, User.all, :id, :email, prompt: true %>
+  </p>
 
   <%= form.submit "#{button}" %>
 <% end %>
