--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -17,3 +17,38 @@
   min-width: 100%;
   opacity: .35;
 }
+
+.nav.user {
+  text-align: right;
+}
+
+.nav.user-email {
+  border-bottom: 1px solid #3c85e0;
+}
+
+.nav.nav-admin {
+  height: 35px;
+  padding: 15px;
+  line-height: 35px;
+  color: black;
+  background-image: linear-gradient(to right, #f9d423 0%, #f58005 100%);  margin-bottom: 40px;
+}
+
+.nav-admin.title {
+  font-size: 140%;
+  font-width: bold;
+  text-transform: uppercase;
+}
+
+.nav-admin.user {
+  float: right;
+}
+
+.nav-admin.user-email {
+  text-decoration: underline;
+}
+
+.nav.nav-admin a {
+  color: white;
+  text-transform: uppercase;
+}
