--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,6 +1,6 @@
 <% if resource.errors.present? %>
   <div>
-    <h1><%= pluralize(resource.errors.count, 'error') %> found: </h1>
+    <h1><%= t('.header', count: resource.errors.count) %> found: </h1>
     <ul>
       <% resource.errors.full_messages.each do |message| %>
         <li><%= message %></li>
