--- a/app/views/admin/tests/edit.html.erb
+++ b/app/views/admin/tests/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>Редактирование теста <%= @test.title %></h1>
+<h1><%= t('.header', title: @test.title) %></h1>
 
-<%= render 'form', button: 'Сохранить' %>
+<%= render 'form' %>
 
-<%= link_to 'Назад', admin_tests_path %>
+<%= link_to t('.back'), admin_tests_path %>
