--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -1,14 +1,14 @@
-<h1>Все тесты</h1>
+<h1><%= t('.header') %></h1>
 
-<%= link_to 'Новый тест', new_admin_test_path %>
+<%= link_to t('.new_test'), new_admin_test_path %>
 
 <table>
   <tr>
-    <th>Название теста</th>
-    <th>Уровень</th>
-    <th>Категория</th>
-    <th>Количество вопросов</th>
-    <th colspan="3">Действия</th>
+    <th><%= Test.human_attribute_name(:title) %></th>
+    <th><%= Test.human_attribute_name(:level) %></th>
+    <th><%= Test.human_attribute_name(:category) %></th>
+    <th><%= t('.table_count_question') %></th>
+    <th colspan="3"><%= t('.table_actions') %></th>
   </tr>
 
   <%= render @tests %>
