--- a/app/views/test_passages/result.html.erb
+++ b/app/views/test_passages/result.html.erb
@@ -1,16 +1,18 @@
-<h2>Тест <i><%= @test_passage.test.title %></i> завершен!</h2>
+<h2><%= t('.header', title: @test_passage.test.title) %></h2>
 
 <p>
   <% if @test_passage.success? %>
-    <h3>Вы успешно прошли тест</h3>
+    <h3><%= t('.good') %>></h3>
     <% color = 'green' %>
   <% else %>
-    <h3>К сожалению, Вы не справились 😔</h3>
+    <h3><%= t('.bad') %></h3>
     <% color = 'red' %>
   <% end %>
   <strong style="color: <%= color %>">
-    Ваш результат <%= @test_passage.result_in_percent %>%
+    <%= t('.result', result: @test_passage.result_in_percent) %>%
   </strong><br>
-  Это <strong><%= @test_passage.correct_questions %> из <%= @test_passage.test.questions.count %></strong> верных ответов
+  <%= t('.this') %><strong>
+        <%= t('.score', only: @test_passage.correct_questions, total: @test_passage.test.questions.count) %>
+      </strong><%= t('.right_answers') %>
 </p>
-<%= link_to 'Ко всем тестам', tests_path %>
+<%= link_to t('.back'), tests_path %>
