--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,12 +1,12 @@
-<h1>Все тесты</h1>
+<h1><%= t('.header') %></h1>
 
 <table>
   <tr>
-    <th>Название теста</th>
-    <th>Уровень</th>
-    <th>Категория</th>
-    <th>Количество вопросов</th>
-    <th>Действия</th>
+    <th><%= Test.human_attribute_name(:title) %></th>
+    <th><%= Test.human_attribute_name(:level) %></th>
+    <th><%= Test.human_attribute_name(:category) %></th>
+    <th><%= t('.table_count_question') %></th>
+    <th><%= t('.table_actions') %></th>
   </tr>
 
   <%= render @tests %>
