--- a/app/views/admin/_nav.html.erb
+++ b/app/views/admin/_nav.html.erb
@@ -1,8 +1,8 @@
 <div class='nav nav-admin'>
-  <span class='nav-admin title'>TestGuru Admin</span>
+  <span class='nav-admin title'><%= t('.header') %></span>
 
   <div class='nav-admin user'>
-    Добро пожаловать, <strong class='nav-admin user-email'><%= current_user.email %></strong>-Гуру |
-    <%= link_to 'Выйти', destroy_user_session_path, method: :delete %>
+    <%= t('.welcome') %>, <strong class='nav-admin user-email'><%= current_user.email %></strong> |
+    <%= link_to t('.exit'), destroy_user_session_path, method: :delete %>
   </div>
 </div>
