Add: локализация подвала сайта

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,10 +1,10 @@
 <footer>
   <p>
     <%= github_url('Andex', 'TestGuru') %><br>
-    <strong>Автор<i> Andex</i> 🖐😊</strong>
+    <strong><%= t('.author') %><i> Andex</i> 🖐😊</strong>
   </p>
   <p>
-    Учебный проект в онлайн-школе <%= link_to 'Thinknetica', 'http://thinknetica.com' %>
+    <%= t('.info') %><%= link_to 'Thinknetica', 'http://thinknetica.com' %>
   </p>
   <p>
     <h3><%= current_year %></h3>
