Fix: ширина текстового поля формы редактирования теста и вопроса

--- a/app/views/admin/questions/_form.html.erb
+++ b/app/views/admin/questions/_form.html.erb
@@ -3,8 +3,9 @@
 
   <p>
     <%= form.label :body %><br>
-    <%= form.text_field :body, id: :body %>
+    <%= form.text_area :body, id: :body, rows: 3, cols:40 %>
   </p>
-
-  <%= form.submit "#{button}" %>
+  <p>
+    <%= form.submit "#{button}" %>
+  </p>
 <% end %>
