--- a/app/views/admin/tests/_form.html.erb
+++ b/app/views/admin/tests/_form.html.erb
@@ -3,7 +3,7 @@
 
   <p>
     <%= form.label :title %>
-    <%= form.text_field :title, id: :title %>
+    <%= form.text_area :title, id: :title, rows: 1, cols:40 %>
   </p>
   <p>
     <%= form.label :level %>
@@ -13,6 +13,7 @@
     <%= form.label :category_id %>
     <%= form.collection_select :category_id, Category.all, :id, :title, prompt: true %>
   </p>
-
-  <%= form.submit %><br>
+  <p>
+    <%= form.submit %>
+  </p>
 <% end %>
