--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <%= render 'shared/navigation' %>
+    <%= render 'shared/navbar' %>
     <%= render 'shared/flash' %>
     <%= yield %>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
