--- a/app/views/admin/tests/_test.html.erb
+++ b/app/views/admin/tests/_test.html.erb
@@ -3,7 +3,7 @@
   <td><%= test_level(test) %></td>
   <td><%= test.category.title %></td>
   <td><%= number_of_questions(test) %></td>
-  <td><%= link_to t('.show'), admin_test_path(test) %></td>
-  <td><%= link_to t('.edit'), edit_admin_test_path(test) %></td>
-  <td><%= link_to t('.delete'), admin_test_path(test), method: :delete, data: { confirm: t('.confirm')} %></td>
+  <td><%= link_to t('.show'), admin_test_path(test), class: 'btn btn-outline-dark btn-sm' %></td>
+  <td><%= link_to t('.edit'), edit_admin_test_path(test), class: 'btn btn-outline-success btn-sm' %></td>
+  <td><%= link_to t('.delete'), admin_test_path(test), method: :delete, data: { confirm: t('.confirm')}, class: 'btn btn-outline-danger btn-sm' %></td>
 </tr>
