--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -1,16 +1,20 @@
-<h1><%= t('.header') %></h1>
+<div class="container">
+  <h1><%= t('.header') %></h1>
 
-<%= link_to t('.new_test'), new_admin_test_path %>
+  <%= link_to t('.new_test'), new_admin_test_path, class: 'btn btn-dark btn-sm' %>
 
-<table>
-  <tr>
-    <th><%= Test.human_attribute_name(:title) %></th>
-    <th><%= Test.human_attribute_name(:level) %></th>
-    <th><%= Test.human_attribute_name(:category) %></th>
-    <th><%= t('.table_count_question') %></th>
-    <th colspan="3"><%= t('.table_actions') %></th>
-  </tr>
+  <table class="table">
+    <thead class="thead-light">
+      <tr>
+        <th><%= Test.human_attribute_name(:title) %></th>
+        <th><%= Test.human_attribute_name(:level) %></th>
+        <th><%= Test.human_attribute_name(:category) %></th>
+        <th><%= t('.table_count_question') %></th>
+        <th colspan="3"><%= t('.table_actions') %></th>
+      </tr>
+    </thead>
 
-  <%= render @tests %>
+    <%= render @tests %>
 
-</table>
+  </table>
+</div>
