--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -3,5 +3,5 @@
   <td><%= test_level(test) %></td>
   <td><%= test.category.title %></td>
   <td><%= number_of_questions(test) %></td>
-  <td><%= button_to t('.start'), start_test_path(test) %></td>
+  <td><%= button_to t('.start'), start_test_path(test), class: 'btn btn-outline-success btn-sm' %></td>
 </tr>
