--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,14 +1,18 @@
-<h1><%= t('.header') %></h1>
+<div class="container">
+  <h1><%= t('.header') %></h1>
 
-<table>
-  <tr>
-    <th><%= Test.human_attribute_name(:title) %></th>
-    <th><%= Test.human_attribute_name(:level) %></th>
-    <th><%= Test.human_attribute_name(:category) %></th>
-    <th><%= t('.table_count_question') %></th>
-    <th><%= t('.table_actions') %></th>
-  </tr>
+  <table class="table">
+    <thead class="thead">
+      <tr>
+        <th><%= Test.human_attribute_name(:title) %></th>
+        <th><%= Test.human_attribute_name(:level) %></th>
+        <th><%= Test.human_attribute_name(:category) %></th>
+        <th><%= t('.table_count_question') %></th>
+        <th><%= t('.table_actions') %></th>
+      </tr>
+    </thead>
 
-  <%= render @tests %>
+    <%= render @tests %>
 
-</table>
+  </table>
+</div>
