--- a/app/views/admin/tests/edit.html.erb
+++ b/app/views/admin/tests/edit.html.erb
@@ -1,6 +1,4 @@
-<div class="card-header">
+<div class="card-header text-center">
   <h1><%= t('.header', title: @test.title) %></h1>
 </div>
   <%= render 'form' %>
-
-<%= link_to t('.back'), admin_tests_path, class: 'btn btn-dark btn-sm' %>
