--- a/app/views/admin/tests/new.html.erb
+++ b/app/views/admin/tests/new.html.erb
@@ -1,7 +1,5 @@
-<div class="card-header">
+<div class="card-header text-center">
   <h1><%= t('.header') %></h1>
 </div>
 
 <%= render 'form' %>
-
-<%= link_to t('.back'), admin_tests_path, class: 'btn btn-dark btn-sm' %>
