Style: страницы просмотра теста

--- a/app/views/admin/tests/show.html.erb
+++ b/app/views/admin/tests/show.html.erb
@@ -1,16 +1,16 @@
-<p>
+<div class="container">
   <strong><%= Test.human_attribute_name(:title) %>:</strong>
   <%= @test.title %>
-<br>
+  <br>
   <strong><%= Test.human_attribute_name(:level) %>:</strong>
-  <%= @test.level %>
-<br>
+  <%= @test.level%>
+  <br>
   <strong><%= Test.human_attribute_name(:category) %>:</strong>
   <%= @test.category.title %>
-</p>
 
-<%= render 'admin/questions/question', questions: @test.questions %>
+  <%= render 'admin/questions/question', questions: @test.questions %>
+</div>
 <br>
-<%= link_to t('.back'), admin_tests_path %> |
-<%= link_to t('.edit_test'), edit_admin_test_path %> |
-<%= link_to t('.add_question'), new_admin_test_question_path(@test) %>
+<%= link_to t('.back'), admin_tests_path, class: 'btn btn-dark btn-sm' %>
+<%= link_to t('.edit_test'), edit_admin_test_path, class: 'btn btn-outline-success btn-sm' %>
+<%= link_to t('.add_question'), new_admin_test_question_path(@test), class: 'btn btn-outline-primary btn-sm' %>
