FixStyle: выравнивание по центру ячеек таблицы и кнопок

--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -4,7 +4,7 @@
   <%= link_to t('.new_test'), new_admin_test_path, class: 'btn btn-dark btn-sm' %>
 
   <table class="table">
-    <thead class="thead-light">
+    <thead class="thead-light text-center">
       <tr>
         <th><%= Test.human_attribute_name(:title) %></th>
         <th><%= Test.human_attribute_name(:level) %></th>
