DeleteUnnecessary&Fix: удаление представления всех вопросов теста т.к. они выводятся при просмотрете конкретного теста

--- a/app/views/admin/questions/show.html.erb
+++ b/app/views/admin/questions/show.html.erb
@@ -23,5 +23,5 @@
   <%= render @question.answers %>
 </ol>
 
-<%= link_to 'Вернуться к тесту', admin_test_questions_path(@question.test_id) %> |
+<%= link_to 'Вернуться к тесту', admin_test_path(@question.test_id) %> |
 <%= link_to 'Редактировать', edit_admin_question_path(@question.test_id) %>
