--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light" style="background-image: linear-gradient(to right, #f9d423 0%, #f58005 100%);">
+<nav class="navbar navbar-light mb-4" style="background-image: linear-gradient(to right, #f9d423 0%, #f58005 100%);">
   <div class="container">
     <div>
       <%= link_to 'TestGuru', tests_path, class: 'navbar-brand' %>
