--- a/app/views/admin/questions/_question.html.erb
+++ b/app/views/admin/questions/_question.html.erb
@@ -1,14 +1,17 @@
-<table>
-  <tr>
-    <th>Вопрос</th>
-    <th colspan="3">Действия</th>
-  </tr>
+<table class="table">
+  <thead class="thead-light text-center">
+    <tr>
+      <th>Вопрос</th>
+      <th colspan="3">Действия</th>
+    </tr>
+  </thead>
   <% questions.each do |question| %>
   <tr>
-    <td><%= question.body %></td>
-    <td><%= link_to 'Показать', admin_question_path(question) %></td>
-    <td><%= link_to 'Редактировать', edit_admin_question_path(question) %></td>
-    <td><%= link_to 'Удалить', admin_question_path(question), method: :delete, data: { confirm: 'Вы уверены?'} %></td>
+    <td class="text-center"><%= question.body %></td>
+    <td class="text-center"><%= link_to 'Показать', admin_question_path(question), class: 'btn btn-outline-dark btn-sm' %></td>
+    <td class="text-center"><%= link_to 'Редактировать', edit_admin_question_path(question), class: 'btn btn-outline-success btn-sm' %></td>
+    <td class="text-center"><%= link_to 'Удалить', admin_question_path(question), method: :delete,data: { confirm: 'Вы уверены?'},
+                                                                                  class: 'btn btn-outline-danger btn-sm' %></td>
   </tr>
   <% end %>
 </table>
