--- a/app/views/admin/tests/show.html.erb
+++ b/app/views/admin/tests/show.html.erb
@@ -1,15 +1,17 @@
 <div class="container">
-  <p>
-    <strong><%= Test.human_attribute_name(:title) %>:</strong>
-    <%= @test.title %>
+  <dl class="row">
+    <h5 class="col-sm-2"><%= Test.human_attribute_name(:title) %>:</h5>
+    <dd class="col-sm-10"><%= @test.title %></dd>
     <br>
-    <strong><%= Test.human_attribute_name(:level) %>:</strong>
-    <%= @test.level%>
+    <h5 class="col-sm-2"><%= Test.human_attribute_name(:level) %>:</h5>
+    <dd class="col-sm-10"><%= @test.level%></dd>
     <br>
-    <strong><%= Test.human_attribute_name(:category) %>:</strong>
-    <%= @test.category.title %>
-  </p>
-  <%= render 'admin/questions/question', questions: @test.questions %>
+    <h5 class="col-sm-2"><%= Test.human_attribute_name(:category) %>:</h5>
+    <dd class="col-sm-10"><%= @test.category.title %></dd>
+    <br>
+    <h5 class="col-sm-2">Вопросы теста:</h5>
+    <dd class="col-sm-10"><%= render 'admin/questions/question', questions: @test.questions %></dd>
+  </dl>
 <br>
 <%= link_to t('.back'), admin_tests_path, class: 'btn btn-dark btn-sm' %>
 <%= link_to t('.edit_test'), edit_admin_test_path, class: 'btn btn-outline-success btn-sm' %>
