Fix: url перехода назад при просмотре и редактировании вопроса т.к. удалено представление только вопросов теста

--- a/app/views/admin/questions/new.html.erb
+++ b/app/views/admin/questions/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', button: 'Создать' %>
 
-<%= link_to 'Назад к вопросам', admin_test_questions_path(@question.test_id) %>
+<%= link_to 'Назад к вопросам', admin_test_path(@question.test_id) %>
