--- a/app/views/admin/questions/edit.html.erb
+++ b/app/views/admin/questions/edit.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', button: 'Сохранить' %>
 
-<%= link_to 'Назад', admin_test_questions_path(@question.test_id) %>
+<%= link_to 'Назад', admin_test_path(@question.test_id) %>
