--- a/app/views/admin/questions/_form.html.erb
+++ b/app/views/admin/questions/_form.html.erb
@@ -1,11 +1,12 @@
-<%= form_with model: [:admin, @test, @question], local: true do |form| %>
-  <%= render 'shared/errors', resource: @question %>
-
-  <p>
-    <%= form.label :body %><br>
-    <%= form.text_area :body, id: :body, rows: 3, cols:40 %>
-  </p>
-  <p>
-    <%= form.submit "#{button}" %>
-  </p>
-<% end %>
+<div class="container card-body">
+  <%= form_with model: [:admin, @test, @question], local: true do |form| %>
+    <%= render 'shared/errors', resource: @question %>
+    <div class="form-group col-md-3">
+      <%= form.label :body, class: 'col-form-label' %><br>
+      <%= form.text_area :body, id: :body, cols:40, class: 'form-control' %>
+      <br>
+      <%= form.submit "#{button}", class: 'btn btn-warning btn-sm' %>
+    </div>
+  <% end %>
+  <%= link_to 'Назад', admin_test_path(@question.test_id), class: 'btn btn-dark btn-sm' %>
+</div>
