--- a/app/views/admin/questions/new.html.erb
+++ b/app/views/admin/questions/new.html.erb
@@ -1,5 +1,5 @@
-<h1><%= question_header(@question) %></h1>
+<div class="card-header text-center">
+  <h1><%= question_header(@question) %></h1>
+</div>
 
 <%= render 'form', button: 'Создать' %>
-
-<%= link_to 'Назад к вопросам', admin_test_path(@question.test_id) %>
