--- a/app/views/admin/answers/_answer.html.erb
+++ b/app/views/admin/answers/_answer.html.erb
@@ -1,16 +1,16 @@
 <table class="table">
   <thead class="thead-light text-center">
     <tr>
-      <th>Вопрос</th>
-      <th>Действия</th>
+      <th><%= t('.question') %></th>
+      <th><%= t('.actions') %></th>
     </tr>
   </thead>
   <% answers.each do |answer| %>
   <tr>
     <td class="text-center"><%= answer.body %></td>
-    <td class="text-center"><%= link_to 'Показать', admin_answer_path(answer), class: 'btn btn-outline-dark btn-sm' %>
-      <%= link_to 'Редактировать', edit_admin_answer_path(answer), class: 'btn btn-outline-success btn-sm' %>
-      <%= link_to 'Удалить', admin_answer_path(answer), method: :delete, data: { confirm: 'Вы уверены?'}, class: 'btn btn-outline-danger btn-sm' %>
+    <td class="text-center"><%= link_to t('.show'), admin_answer_path(answer), class: 'btn btn-outline-dark btn-sm' %>
+      <%= link_to t('.edit'), edit_admin_answer_path(answer), class: 'btn btn-outline-success btn-sm' %>
+      <%= link_to t('.delete'), admin_answer_path(answer), method: :delete, data: { confirm: 'Вы уверены?'}, class: 'btn btn-outline-danger btn-sm' %>
     </td>
   </tr>
   <% end %>
