Fix: локализация страницы просмотра вопроса

--- a/app/views/admin/answers/_answer.html.erb
+++ b/app/views/admin/answers/_answer.html.erb
@@ -1,7 +1,7 @@
 <table class="table">
   <thead class="thead-light text-center">
     <tr>
-      <th><%= t('.question') %></th>
+      <th><%= Answer.model_name.human %></th>
       <th><%= t('.actions') %></th>
     </tr>
   </thead>
