--- a/app/views/admin/questions/_question.html.erb
+++ b/app/views/admin/questions/_question.html.erb
@@ -1,16 +1,16 @@
 <table class="table">
   <thead class="thead-light text-center">
     <tr>
-      <th>Вопрос</th>
-      <th colspan="3">Действия</th>
+      <th><%= Question.model_name.human %></th>
+      <th colspan="3"><%= t('.actions') %></th>
     </tr>
   </thead>
   <% questions.each do |question| %>
   <tr>
     <td class="text-center"><%= question.body %></td>
-    <td class="text-center"><%= link_to 'Показать', admin_question_path(question), class: 'btn btn-outline-dark btn-sm' %></td>
-    <td class="text-center"><%= link_to 'Редактировать', edit_admin_question_path(question), class: 'btn btn-outline-success btn-sm' %></td>
-    <td class="text-center"><%= link_to 'Удалить', admin_question_path(question), method: :delete,data: { confirm: 'Вы уверены?'},
+    <td class="text-center"><%= link_to t('.show'), admin_question_path(question), class: 'btn btn-outline-dark btn-sm' %></td>
+    <td class="text-center"><%= link_to t('.edit'), edit_admin_question_path(question), class: 'btn btn-outline-success btn-sm' %></td>
+    <td class="text-center"><%= link_to t('.delete'), admin_question_path(question), method: :delete,data: { confirm: 'Вы уверены?'},
                                                                                   class: 'btn btn-outline-danger btn-sm' %></td>
   </tr>
   <% end %>
