Add: локализация страниц просмотра вопроса, редактирования и создания

--- a/app/views/admin/answers/_form.html.erb
+++ b/app/views/admin/answers/_form.html.erb
@@ -12,6 +12,7 @@
   </p>
 
   <div class="actions">
-    <%= form.submit "#{button}"%>
+    <%= form.submit %>
   </div>
 <% end %>
+<%= link_to t('.back'), admin_question_path(@answer.question) %>
