--- a/app/views/admin/answers/new.html.erb
+++ b/app/views/admin/answers/new.html.erb
@@ -1,7 +1,5 @@
-<h1>Новый вариант ответа</h1>
+<h1><%= t('.header') %></h1>
 
 <strong><%= @question.body %></strong>
 
-<%= render 'form', button: 'Создать' %>
-
-<%= link_to 'Назад', admin_question_path(@question) %>
+<%= render 'form' %>
