--- a/app/views/admin/answers/_form.html.erb
+++ b/app/views/admin/answers/_form.html.erb
@@ -1,18 +1,15 @@
-<%= form_with model: [:admin, @question, @answer] do |form| %>
-  <%= render 'shared/errors', resource: @answer %>
-
-  <p>
-    <%= form.label :body %>
-    <%= form.text_area :body, id: :answer_body, rows: 7, cols:60 %>
-  </p>
-
-  <p>
-    <%= form.label :correct %>
-    <%= form.check_box :correct, id: :answer_correct %>
-  </p>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
-<%= link_to t('.back'), admin_question_path(@answer.question) %>
+<div class="container card-body">
+  <%= form_with model: [:admin, @question, @answer] do |form| %>
+   <%= render 'shared/errors', resource: @answer %>
+     <div class="form-group col-md-3">
+       <%= form.label :body, class: 'col-form-label' %>
+       <%= form.text_area :body, id: :answer_body, cols:40, class: 'form-control' %>
+       <br>
+       <%= form.label :correct %>
+       <%= form.check_box :correct, id: :answer_correct %>
+       <br>
+       <%= form.submit class: 'btn btn-warning btn-sm' %>
+   </div>
+  <% end %>
+  <%= link_to t('.back'), admin_question_path(@answer.question), class: 'btn btn-dark btn-sm' %>
+</div>
