--- a/app/views/admin/answers/edit.html.erb
+++ b/app/views/admin/answers/edit.html.erb
@@ -1,6 +1,7 @@
-<h1><%= t('.header') %></h1>
-
-<strong><%= @answer.question.body %></strong>
-
-<%= render 'form' %>
-
+<div class="card-header text-center mb-4">
+  <h1><%= t('.header') %></h1>
+</div>
+<div class="container">
+  <h5 class="font-weight-bold"><%= @answer.question.body %></h5>
+  <%= render 'form' %>
+</div>
