--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -11,5 +11,8 @@
       <%= b.label %>
     </p>
   <% end %>
+  <p>
+    <%= link_to t('.gist'), gist_test_passage_path(@test_passage), method: :post %>
+  </p>
   <%= form.submit t('.next') %>
 <% end %>
