--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,6 +3,7 @@
     <div>
       <%= link_to 'TestGuru', tests_path, class: 'navbar-brand' %>
       <%= link_to t('.admin_panel'), admin_tests_path, class: 'navbar-text' if user_signed_in? && current_user.admin? %>
+      <i><%= link_to t('.gists'), admin_gists_path, class: 'navbar-text' if user_signed_in? && current_user.admin? %></i>
       <% if user_signed_in? %>
     </div>
       <div class='navbar-text'>
