--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -6,7 +6,10 @@
   <table class="table">
     <thead class="thead-light text-center">
       <tr>
-        <th><%= Test.human_attribute_name(:title) %></th>
+        <th class="sort-by-title pointer">
+          <%= Test.human_attribute_name(:title) %>
+          <%= octicon 'arrow-up', class: 'text-success hide' %>
+          <%= octicon 'arrow-down', class: 'text-success hide' %>
         <th><%= Test.human_attribute_name(:level) %></th>
         <th><%= Test.human_attribute_name(:category) %></th>
         <th><%= t('.table_count_question') %></th>
