--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -4,7 +4,11 @@
   <table class="table">
     <thead class="thead">
       <tr>
-        <th><%= Test.human_attribute_name(:title) %></th>
+        <th class="sort-by-title pointer">
+          <%= Test.human_attribute_name(:title) %>
+          <%= octicon 'arrow-up', class: 'text-success hide' %>
+          <%= octicon 'arrow-down', class: 'text-success hide' %>
+        </th>
         <th><%= Test.human_attribute_name(:level) %></th>
         <th><%= Test.human_attribute_name(:category) %></th>
         <th><%= t('.table_count_question') %></th>
