--- a/app/views/admin/tests/_test.html.erb
+++ b/app/views/admin/tests/_test.html.erb
@@ -1,9 +1,9 @@
 <tr>
-  <td class="text-center"><%= test.title %></td>
-  <td class="text-center"><%= test_level(test) %></td>
-  <td class="text-center"><%= test.category.title %></td>
-  <td class="text-center"><%= number_of_questions(test) %></td>
-  <td class="text-center"><%= link_to t('.show'), admin_test_path(test), class: 'btn btn-outline-dark btn-sm' %></td>
-  <td class="text-center"><%= link_to t('.edit'), edit_admin_test_path(test), class: 'btn btn-outline-success btn-sm' %></td>
-  <td class="text-center"><%= link_to t('.delete'), admin_test_path(test), method: :delete, data: { confirm: t('.confirm')}, class: 'btn btn-outline-danger btn-sm' %></td>
+  <td><%= test.title %></td>
+  <td><%= test_level(test) %></td>
+  <td><%= test.category.title %></td>
+  <td><%= number_of_questions(test) %></td>
+  <td><%= link_to t('.show'), admin_test_path(test), class: 'btn btn-outline-dark btn-sm' %></td>
+  <td><%= link_to t('.edit'), edit_admin_test_path(test), class: 'btn btn-outline-success btn-sm' %></td>
+  <td><%= link_to t('.delete'), admin_test_path(test), method: :delete, data: { confirm: t('.confirm')}, class: 'btn btn-outline-danger btn-sm' %></td>
 </tr>
