--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -3,8 +3,8 @@
 
   <%= link_to t('.new_test'), new_admin_test_path, class: 'btn btn-dark btn-sm' %>
 
-  <table class="table">
-    <thead class="thead-light text-center">
+  <table class="table text-center">
+    <thead class="thead">
       <tr>
         <th class="sort-by-title pointer">
           <%= Test.human_attribute_name(:title) %>
@@ -16,8 +16,6 @@
         <th colspan="3"><%= t('.table_actions') %></th>
       </tr>
     </thead>
-
-    <%= render @tests %>
-
+      <%= render @tests %>
   </table>
 </div>
