--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <h1><%= t('.header') %></h1>
 
-  <table class="table">
+  <table class="table text-center">
     <thead class="thead">
       <tr>
         <th class="sort-by-title pointer">
@@ -15,8 +15,6 @@
         <th><%= t('.table_actions') %></th>
       </tr>
     </thead>
-
-    <%= render @tests %>
-
+      <%= render @tests %>
   </table>
 </div>
