--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -8,8 +8,8 @@
       <tr>
         <th class="sort-by-title pointer">
           <%= Test.human_attribute_name(:title) %>
-          <%= octicon 'arrow-up', class: 'text-success hide' %>
-          <%= octicon 'arrow-down', class: 'text-success hide' %>
+          <%= octicon 'arrow-up', class: 'text-success hide align-middle', height: 32 %>
+          <%= octicon 'arrow-down', class: 'text-success hide align-middle', height: 32 %>
         <th><%= Test.human_attribute_name(:level) %></th>
         <th><%= Test.human_attribute_name(:category) %></th>
         <th><%= t('.table_count_question') %></th>
