--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,4 +1,4 @@
-<% if resource.errors.present? %>
+<% if resource.present? && resource.errors.present? %>
   <div>
     <h1><%= t('.header', count: resource.errors.count) %> found: </h1>
     <ul>
