--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,10 +1,12 @@
 <% if resource.present? && resource.errors.present? %>
+  <%= content_tag :div, class: 'resource-errors', data: { resource_id: resource.id} do %>
   <div>
-    <h1><%= t('.header', count: resource.errors.count) %> found: </h1>
+    <h1><%= t('.header', count: resource.errors.count) %>: </h1>
     <ul>
       <% resource.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
     </ul>
   </div>
+  <% end %>
 <% end %>
