Add: progress-bar при прохождении теста

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -5,3 +5,10 @@
 .hide {
   display: none;
 }
+
+.progress-bar {
+  width: 100%;
+  background-color: #ffc107;
+  text-align: center;
+  color: black;
+}
