Add: страница с формой обратной связи

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,6 +3,9 @@
     <%= github_url('Andex', 'TestGuru') %><br>
     <strong><%= t('.author') %><i> Andex</i> 🖐😊</strong>
   </p>
+  <p class="text-monospace font-italic">
+    <%= link_to 'Cвязаться со мной', new_feedback_path %>
+  </p>
   <p>
     <%= t('.info') %><%= link_to 'Thinknetica', 'http://thinknetica.com' %>
   </p>
