Add: локализация для формы обратной связи

--- a/app/views/feedbacks/new.html.erb
+++ b/app/views/feedbacks/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Обратная связь</h2>
+<h2><%= t('.header') %></h2>
 
-<strong>Здесь Вы можете оставить мне сообщение</strong>
+<strong><%= t('.form') %></strong>
 <%= render 'form' %>
