--- a/app/views/feedbacks/_form.html.erb
+++ b/app/views/feedbacks/_form.html.erb
@@ -1,16 +1,16 @@
 <%= form_for(:feedback, url: feedbacks_path, locale: true) do |f| %>
 
   <div class="field">
-    <%= f.label :topic, 'Тема' %>
-    <%= f.select :topic, ["General question", "Problem", "Advice", "Thanks"] %>
+    <%= f.label :topic, t('.topic') %>
+    <%= f.select :topic, [t('.general_question'), t('.problem'), t('.advice'), t('.thanks')] %>
   </div>
 
   <div class="field">
-    <%= f.label :message_text, 'Текст сообщения' %><br />
+    <%= f.label :message_text, t('.message_text') %><br />
     <%= f.text_area :message_text, cols: 60 %>
   </div>
 
   <div class="actions">
-    <%= f.submit 'Отправить' %>
+    <%= f.submit t('.send') %>
   </div>
 <% end %>
