--- a/app/views/feedbacks/_form.html.erb
+++ b/app/views/feedbacks/_form.html.erb
@@ -1,16 +1,12 @@
 <%= form_for(:feedback, url: feedbacks_path, locale: true) do |f| %>
 
-  <div class="field">
-    <%= f.label :topic, t('.topic') %>
+  <div class="form-group col-md-10">
+    <%= f.label :topic, t('.topic'), class: 'col-form-label font-weight-bold' %>:
     <%= f.select :topic, [t('.general_question'), t('.problem'), t('.advice'), t('.thanks')] %>
-  </div>
-
-  <div class="field">
-    <%= f.label :message_text, t('.message_text') %><br />
-    <%= f.text_area :message_text, cols: 60 %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit t('.send') %>
+    <br />
+    <%= f.label :message_text, t('.message_text'), class: 'col-form-label font-weight-bold' %>:
+    <%= f.text_area :message_text, cols: 60, class: 'form-control' %>
+    <br />
+    <%= f.submit t('.send'), class: 'btn btn-info btn-sm' %>
   </div>
 <% end %>
